--- a/app/views/admin/jobs/index.html.erb
+++ b/app/views/admin/jobs/index.html.erb
@@ -5,36 +5,59 @@
 <br><br>
 
 <table class="table table-boldered">
-  <% @jobs.each do |job| %>
+    <thead>
+        <tr>
+            <td>
+                職缺
+            </td>
 
-  <tr>
+            <td>
+              收到履歷數量
+            </td>
+            <td>
+                薪資下限
+            </td>
+            <td>
+                薪資上限
+            </td>
+            <td>
+                管理選項
+            </td>
+            <td>
+                刊登時間
+            </td>
+        </tr>
+    </thead>
 
-    <td>
-      <%= render_job_status(job) %>
-      <%= link_to(job.title,admin_job_path(job)) %>
-    </td>
+    <% @jobs.each do |job| %>
+    <tr>
 
-    <td>
-      <%= job.created_at %>
-    </td>
+        <td>
+            <%= render_job_status(job) %>
 
-    <td>
-      <%= link_to("Edit", edit_admin_job_path(job)) %> |
-      <%= link_to("Destroy", admin_job_path(job), :method => :delete, :date => { :confirm => "Are you sure?"}) %>
+            <%= link_to(job.title, admin_job_path(job)) %>
 
-      <% if job.is_hidden %>
+        </td>
+        <td> <%= link_to(job.resumes.count, admin_job_resumes_path(job)) %> </td>
+        <td> <%= job.wage_lower_bound %> </td>
+        <td> <%= job.wage_upper_bound %> </td>
 
-        <%= link_to("Publish", publish_admin_job_path(job) , :method => :post, :class => "btn btn-xs btn-default") %>
-      <% else %>
-        <%= link_to("Hide", hide_admin_job_path(job), :method => :post,  :class => "btn btn-xs btn-default") %>
-      <% end %>
+        <td>
+            <%= link_to("Edit", edit_admin_job_path(job)) %>
+            |
+            <%= link_to("Destroy", admin_job_path(job), :method => :delete, :data => { :confirm => "Are you sure?" }) %>
 
-    </td>
+            |
+            <% if job.is_hidden %>
 
-
-
-  </tr>
-
-  <% end %>
-
+            <%= link_to("Publish", publish_admin_job_path(job) , :method => :post, :class => "btn btn-xs btn-default") %>
+        <% else %>
+            <%= link_to("Hide", hide_admin_job_path(job), :method => :post,  :class => "btn btn-xs btn-default") %>
+            <% end %>
+        </td>
+        <td>
+            <%= job.created_at %>
+        </td>
+    </tr>
+    <% end %>
 </table>
